Fixed the logo alignment issue in mobile device

--- a/css/style.css
+++ b/css/style.css
@@ -193,6 +193,12 @@
     justify-content: center;
 }
 
+@media (max-width: 576px) {
+    .header-carousel .owl-dots {
+        right: 10px;
+    }
+}
+
 .header-carousel .owl-dots .owl-dot {
     position: relative;
     width: 45px;
